--- a/overview.Rmd
+++ b/overview.Rmd
@@ -2,7 +2,12 @@
 title: "The Kronos Incident- Follow the Data"
 description: |
   Overview of the facts and objectives of this challenge.
-output: distill::distill_article
+output: 
+  distill::distill_article:
+    toc: true
+    toc_float: true
+    toc_depth: 3
+    self_contained: false
 ---
 <style>
 
@@ -47,18 +52,32 @@ The main aim of the assignment is to identify anomalies between the data provide
 Most visualizations show geographically-referenced movement data use conventional Geographic Information Systems (GIS). Movement data are represented as lines on the map. The most basic form is a line between two points
 which gives information about the movement of an object. Trajectory data can help in understanding of flow during an unusual event. Real world data sets typically do not provide singular trajectories. Instead, multiple trajectories tend to be mapped, as seen in Figure 1. However, when large data sets are involved, these trajectory lines tend to overlap, resulting in visual clutter and occlusions and makes the trajectory of individual lines illegible.
 
-One way to overcome this is to adjust the opacity of the lines. This leads to less clutter. However, it results in data loss as some of the data may be hidden in order to reflect higher density areas (high frequency of trajectories). An alternative is to differentiate each line using colors, as what is done in Figure 1 below. Although this makes the lines with distinctive colors clearer, it does not resolve the constraint of large data sets as these lines still overlap and some colors may look similar since there is not enough colors to cover the whole data set. Interactive filtering allows for one to better manage large data sets with multiple trajectories, by selecting which trajectories are viewed at any one time.
+One way to overcome this is to adjust the opacity of the lines. This leads to less clutter. However, it results in data loss as some of the data may be hidden in order to reflect higher density areas (high frequency of trajectories). An alternative is to differentiate each line using colors, as what is done in Figure 1 below. Although this makes the lines with distinctive colors clearer, it does not resolve the constraint of large data sets as these lines still overlap and some colors may look similar since there is not enough colors to cover the whole data set. Interactive filtering and faceting allows for one to better manage large data sets with multiple trajectories, by selecting which trajectories are viewed at any one time.
 
-Another limitation of trajectory maps are that they are unable to reflect the data's thematic attributes like direction and flow of traffic. One way to overcome this is cross-linking. Cross-linking links the trajectory map to another display of the data which presents the thematic attributes. It allows the user to hover over or select a point on either chart and the corresponding data on both charts will be highlighted. The combination of visual representations allows users to get a better understanding of the information from the data.
+![Figure 1: Overplotting on map<br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Arcaya/](Image/Ex4.png)
 
-![Figure 1: Overplotting on parallel coordinate plots<br> Source: http://visualdata.wustl.edu/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Arcaya/](Image/GISOverplot.JPG)
+![Figure 2: Overplotting on map<br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Alcoser/](Image/Ex2.png)
 
-Static visualizations Usually focused on a specific data story and users cannot go beyond a single view to explore additional stories beyond what is in front of them. In the bar chart below, users can only see 1 point of view, which shows percentage of population speaking each language at home in New York. 
+Another limitation of trajectory maps are that they are unable to reflect the data's thematic attributes like direction and flow of traffic. One way to overcome this is cross-linking. Cross-linking links the trajectory map to another display of the data which presents the thematic attributes. It allows the user to hover over or select a point on either chart and the corresponding data on both charts will be highlighted. The combination of visual representations allows users to get a better understanding of the information from the data. In Figurre 3 below, the author has used annotation to reflect information in a separate table format. This has resulted in clutter and the information in the table is too small to be deciphered easily. An interactive datatable presented together with a map will resolve this issue as the user is able to filter for the carID, date and time they wish to get further details on.
 
-When exploring unexpected structure in graphics, it is useful to have selections made on one chart update the other. For example, if the user is exploring clusters observed on a scatterplot, it is useful to have the selected cluster update some chart of group membership, such as a jittered scatterplot or sets of bar charts. Brushing and cross-linking two charts allows for one to select groups of observations and interaction with one chart will change the other, giving the user multiple views of the selected observations.
+![Figure 3: Using annotations to reflect information<br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Konstanz/](Image/Ex5.png)
 
-![Figure 2: Static barcharts <br> Source: https://www.census.gov/programs-surveys/acs/](Image/BarChartEx.JPG)
+Static visualizations Usually focused on a specific data story and users cannot go beyond a single view to explore additional stories beyond what is in front of them. In the stacked bar chart below, users can see which location is visited the most often and which time period they are popular. However, one limitation of the stacked bar chart is that it is difficult to compare relative size of the components that make up each bar. Also, as categories or data series are added, stacked column charts quickly become visually complex. In the figure below, it is hard for the user to compare the popularity of Abila Scrapyard and Kronos Pipe and Irrigation in the afternoon.
 
+When exploring unexpected structure in graphics, it is useful to have selections made on one chart update the other. Cross-linking two charts allows for one to select groups of observations and interaction with one chart will change the other, giving the user multiple views of the selected observations.
+
+![Figure 4: Static and stacked barcharts <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Arcaya/](Image/Ex3.png)
+An alternative view of popular times and locations is the use of parallel coordinates as shown in Figure 5 below. The user is able to decipher which locations are most popular during each day of the week, and which department it is popular with. However, due to the static nature of the chart, users are unable to obtain further information such as transaction amount. Also, the chart uses colors which are highly similar to show the different days and different departments. This makes it harder to read the chart. 
+
+![Figure 5: Parallel Coordinates <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Alcoser/](Image/Ex1.png)
+
+Another presentation is via the use of a heatmap. In Figure 6 below, we see that this results in a cluttered chart where the axis labels are not clear and visible. A heatmap also gives the user a broad view of the trends but without interactive features like tooltips, users are unable to obtain further details. Also, as the trends are represented by a color scale, it may be difficult to interpret for cells which have values close to each other and hence the colors do not differ visibly to the human eye.
+
+![Figure 6: Static heatmaps <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/Central%20South%20University/](Image/Ex6.png)
+
+The below boxplot shows the price range of all transactions recorded. Due to the static nature of the plot, we are unable to see other details such as transaction date and location. By applying brushing and cross-linking of two charts- the boxplot and another datatable, this allows for one to select groups of observations and interaction with one chart will change the other. Hence the user will be able to obtain more details on the selected observations.
+
+![Figure 7: Static boxplots <br> Source: https://www.cs.umd.edu/hcil/varepository/VAST%20Challenge%202014/challenges/MC2%20-%20Patterns%20of%20Life%20Analysis/entries/University%20of%20Buenos%20Aires%20-%20Alcoser/](Image/Ex7.png)
 ## Suggested visualisations and R packages
 
 There are gaps in the current visualizations in supporting the intended analysis of this assignment. The majority of visualizations are largely static and hence are unable to reflect a comprehensive overview of the multivariate data.
